--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -35,6 +35,7 @@
       <h4 style="color:red;">Hello, my name is</h4>
       <h1>Purva <span>Athnere</span></h1>
       <h3 id="typing-text" style="color:red;">I'am a Web Developer.</h3>
+      <a href="img/resume.pdf" target="_blank"> Download Resume </a>
     </div>
   </div>
 
